Adding Data Table Page

--- a/Week 12 - HTML/Graph Comparison Page.html
+++ b/Week 12 - HTML/Graph Comparison Page.html
@@ -56,27 +56,26 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Plots <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="image_1_html.html">Max Temperature</a></li>
-            <li><a href="image_2_html.html">Humidity</a></li>
-            <li><a href="image_3_html.html">Cloudiness</a></li>
-            <li><a href="image_4_html.html">Wind Speed</a></li>
-          </ul>
-        </li>
-        <li><a href="Graph Comparison Page.html">Comparison</a></li>
-        <li><a href="Data.html">Data</a></li>
-        <li><a href="Web Homework.html">Home</a></li>
+            <li><a href="#">Max Temperature</a></li>
+              <li><a href="#">Humidity</a></li>
+              <li><a href="#">Cloudiness</a></li>
+              <li><a href="#">Wind Speed</a></li>
+            </ul>
+          </li>
+          <li><a href="Web Homework.html">Home</a></li>
+          <li><a href="Graph Comparison Page.html">Comparison</a></li>
+          <li><a href="Data Table.html">Data</a></li>
       </ul>
     </div>
-    <!-- /.navbar-collapse -->
+    <!-- navbar-collapse -->
     </div>
-    <!-- /.container-fluid -->
     </nav>
     <div class="container-fluid">
         <div class="row" style="border-radius: 25px; background-color: lightgrey;">
             <div class = 'gap-30'></div>
             <p class = "font_">Comparison: Latitude vs. X</p>
             <hr>
-            <p style="font-size:17px;"> Click on any plot to get an in-depth analysis.</p>
+            <p style="font-size:17px;"> Click on a plot for in-depth analysis.</p>
             <div class="row">                     
                 <div class="col-md-6">
                     <img src="City Latitude vs Max Temp.png" alt="Max Temperature"> 
