--- a/Week 12 - HTML/Web Homework.html
+++ b/Week 12 - HTML/Web Homework.html
@@ -66,12 +66,11 @@
           </li>
           <li><a href="Web Homework.html">Home</a></li>
           <li><a href="Graph Comparison Page.html">Comparison</a></li>
-          <li><a href="Data.html">Data</a></li>
+          <li><a href="Data Table.html">Data</a></li>
         </ul>
       </div>
-      <!-- /.navbar-collapse -->
+      <!-- navbar-collapse -->
       </div>
-      <!-- /.container-fluid -->
     </nav>
   
     <div class="container">
